--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,2 +1,3 @@
 public net.minecraft.world.level.block.entity.AbstractFurnaceBlockEntity f_58318_
 public net.minecraft.world.level.block.entity.AbstractFurnaceBlockEntity f_58319_
+public net.minecraft.world.entity.Entity f_19796_ # random
