--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,23 +24,27 @@ jobs:
 
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+      with:
+        cache-read-only: false
 
     - name: Build with Gradle Wrapper
       run: ./gradlew jar
 
-  dependency-submission:
+#  dependency-submission:
 
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
+#    runs-on: ubuntu-latest
+#    permissions:
+#      contents: write
 
-    steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
+#    steps:
+#    - uses: actions/checkout@v4
+#    - name: Set up JDK 17
+#      uses: actions/setup-java@v4
+#      with:
+#        java-version: '17'
+#        distribution: 'temurin'
 
-    - name: Generate and submit dependency graph
-      uses: gradle/actions/dependency-submission@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+#    - name: Generate and submit dependency graph
+#      uses: gradle/actions/dependency-submission@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+#      with:
+#        cache-read-only: false
