--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,3 +1,4 @@
 public net.minecraft.world.level.block.entity.AbstractFurnaceBlockEntity f_58318_
 public net.minecraft.world.level.block.entity.AbstractFurnaceBlockEntity f_58319_
 public net.minecraft.world.entity.Entity f_19796_ # random
+public-f net.minecraft.world.item.AxeItem f_150683_ # STRIPPABLES
