--- a/gradle.properties
+++ b/gradle.properties
@@ -16,7 +16,6 @@ mixin_version = 0.8.5
 librarian_version = 1.+
 parchment_version = 2022.11.27
 
-
 registrate_version = MC1.19-1.1.5
 flywheel_minecraft_version = 1.19.2
 flywheel_version = 0.6.11-22
@@ -24,6 +23,7 @@ jei_minecraft_version = 1.19.2
 jei_version = 11.6.0.1024
 create_minecraft_version = 1.19.2
 create_version = 0.5.1.h-58
+create_casing_version = 1.6.1-fix3
 #mantle_build = 1.10.35
 #tinkers_build = 3.8.3.39
 #create_casing_version = 1.6.0-ht1
