*casually ports an entire forge class*

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.autoSave": "off",
     "java.jdt.ls.java.home": "/usr/local/sdkman/candidates/java/current",
-    "java.import.gradle.java.home": "/usr/local/sdkman/candidates/java/current"
+    "java.import.gradle.java.home": "/usr/local/sdkman/candidates/java/current",
+    "java.configuration.updateBuildConfiguration": "automatic"
 }
