--- a/gradle.properties
+++ b/gradle.properties
@@ -22,6 +22,7 @@ parchment_version = 2022.11.27
 
 # Common
 mixin_extras_version = 0.3.5
+architectury_version = 6.6.92
 
 # Dev QoL
 fabric_recipe_viewer = emi
