More work on common platform!

--- a/gradle.properties
+++ b/gradle.properties
@@ -26,8 +26,7 @@ architectury_version = 6.6.92
 
 # Dev QoL
 fabric_recipe_viewer = emi
-jei_fabric_version = 11.6.0.1018
-jei_forge_version = 11.6.0.1018
+jei_version = 11.6.0.1018
 rei_version = 9.1.682
 emi_version = 1.1.0+1.19.2
 modmenu_version = 4.1.2
