--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-mod_version = 1.2b.Beta Mid-Dev
+mod_version = 1.2c.Beta Mid-Dev
 artifact_minecraft_version = 1.19.2
 
-forge_version = 43.3.13
+forge_version = 43.4.4
 mc_version=1.19.2
 minecraft_version=1.19.2
 
